// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function local 1`] = `
"{
  \\"locals\\": {
    \\"instance_ids\\": \\"\${concat(aws_instance.blue.*.id, aws_instance.green.*.id)}\\"
  }
}"
`;

exports[`local reference 1`] = `
"{
  \\"locals\\": {
    \\"resource_name\\": \\"my_resource\\"
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test-resource\\": {
        \\"name\\": \\"\${local.resource_name}\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`multiple locals 1`] = `
"{
  \\"locals\\": {
    \\"local1\\": \\"1\\",
    \\"local2\\": \\"2\\"
  }
}"
`;

exports[`object local 1`] = `
"{
  \\"locals\\": {
    \\"common_tags\\": {
      \\"Owner\\": \\"owner\\",
      \\"Service\\": \\"service_name\\"
    }
  }
}"
`;

exports[`string local 1`] = `
"{
  \\"locals\\": {
    \\"greeting\\": \\"Hello, \${var.name}\\"
  }
}"
`;
